# DoomsDay

./: package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: cross-platform.json  default.json
src-tauri/src/: activate.rs  api.rs  capture.rs  lib.rs  shortcuts.rs  window.rs
src-tauri/src/speaker/: mod.rs  windows.rs
src/components/: DragButton.tsx  Sidebar.tsx
src/config/: shortcuts.ts
src/hooks/: useGlobalShortcuts.ts  useShortcuts.ts  useSystemAudio.ts
src/lib/: analytics.ts
src/lib/functions/: index.ts  pluely.api.ts
src/pages/dashboard/: index.tsx
src/pages/shortcuts/components/shortcuts/: ShortcutRecorder.tsx
