[package]
name = "pluely"
version = "0.1.0"
description = "Pluely"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [ "macos-private-api"] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-http = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-autostart = "2.0.0"
tauri-plugin-machine-uid = "2.0.0"
tauri-plugin-keychain = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# --- ADD THESE NEW DEPENDENCIES ---
tauri-plugin-single-instance = "2.0.0"  # Required for single instance lock
anyhow = "1.0"                          # Required for error handling
# ----------------------------------

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = "0.1"
tauri-plugin-macos-permissions = "2.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
# --- ADD WASAPI HERE ---
wasapi = "0.13"  # Required for Windows audio
# -----------------------
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_Media_Audio",
] }
